--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,8 @@
       providerName="System.Data.SqlClient" />
     <add name="tshirtsConnectionString1" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;User ID=sa;Password=sql"
       providerName="System.Data.SqlClient" />
+    <add name="tshirtsConnectionString2" connectionString="Data Source=WINDOWS\SQLEXPRESS;Initial Catalog=tshirts;Persist Security Info=True;User ID=sa;Password=sql"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
