--- a/Web.config
+++ b/Web.config
@@ -15,6 +15,8 @@
       providerName="System.Data.SqlClient" />
     <add name="tshirtsConnectionString3" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;Persist Security Info=True;User ID=sa;Password=sql"
       providerName="System.Data.SqlClient" />
+    <add name="tshirtsConnectionString4" connectionString="Data Source=USER-PC\SQLEXPRESS;Initial Catalog=tshirts;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
