--- a/Web.config
+++ b/Web.config
@@ -1,29 +1,33 @@
-<?xml version="1.0"?>
-<!--
+<?xml version="1.0"?><!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-<configuration>
+  --><configuration><configSections><sectionGroup name="businessObjects"><sectionGroup name="crystalReports"><section name="rptBuildProvider" type="CrystalDecisions.Shared.RptBuildProviderHandler, CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, Custom=null"/></sectionGroup></sectionGroup></configSections>
+  <appSettings>
+      <add key="CrystalImageCleaner-AutoStart" value="true"/>
+      <add key="CrystalImageCleaner-Sleep" value="60000"/>
+      <add key="CrystalImageCleaner-Age" value="120000"/>
+  </appSettings>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
-      providerName="System.Data.SqlClient" />
-    <add name="tshirtsConnectionString" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="tshirtsConnectionString1" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;User ID=sa;Password=sql"
-      providerName="System.Data.SqlClient" />
-    <add name="tshirtsConnectionString2" connectionString="Data Source=WINDOWS\SQLEXPRESS;Initial Catalog=tshirts;Persist Security Info=True;User ID=sa;Password=sql"
-      providerName="System.Data.SqlClient" />
-    <add name="tshirtsConnectionString3" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;Persist Security Info=True;User ID=sa;Password=sql"
-      providerName="System.Data.SqlClient" />
-    <add name="tshirtsConnectionString4" connectionString="Data Source=USER-PC\SQLEXPRESS;Initial Catalog=tshirts;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+    <add name="tshirtsConnectionString" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="tshirtsConnectionString1" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;User ID=sa;Password=sql" providerName="System.Data.SqlClient"/>
+    <add name="tshirtsConnectionString2" connectionString="Data Source=WINDOWS\SQLEXPRESS;Initial Catalog=tshirts;Persist Security Info=True;User ID=sa;Password=sql" providerName="System.Data.SqlClient"/>
+    <add name="tshirtsConnectionString3" connectionString="Data Source=JULIO-PC;Initial Catalog=tshirts;Persist Security Info=True;User ID=sa;Password=sql" providerName="System.Data.SqlClient"/>
+    <add name="tshirtsConnectionString4" connectionString="Data Source=USER-PC\SQLEXPRESS;Initial Catalog=tshirts;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-      </assemblies>
-    </compilation>
+        <add assembly="CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportAppServer.Controllers, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+      <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/></assemblies>
+    <buildProviders><add extension=".rpt" type="CrystalDecisions.Web.Compilation.RptBuildProvider, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/></buildProviders></compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
     </authentication>
@@ -46,8 +50,8 @@
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
       </providers>
     </roleManager>
-  </system.web>
+  <httpHandlers><add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/></httpHandlers></system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
-  </system.webServer>
-</configuration>
+  <handlers><add name="CrystalImageHandler.aspx_GET" verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" preCondition="integratedMode"/></handlers><validation validateIntegratedModeConfiguration="false"/></system.webServer>
+<businessObjects><crystalReports><rptBuildProvider><add embedRptInResource="true"/></rptBuildProvider></crystalReports></businessObjects></configuration>
